src/components/Breadcrumb/style.styl
@require 'settings/breakpoints'

.Breadcrumb
    display flex
    align-items center


.Breadcrumb__previousButton
    margin-right 1.5rem
    cursor pointer

.Breadcrumb__items
    flex-grow 1
    color charcoalGrey

.Breadcrumb__previousItems
    display flex

.BreadcrumbItem
    font-size 0.875rem
    line-height 1

.BreadcrumbItem--current
    font-size 1.5rem
    font-weight bold
    line-height 1.67

.BreadcrumbSeparator
    display inline-block
    margin-left 0.125rem
    margin-right 0.125rem

